[package]
edition = "2024"
license = "MIT"
name = "tonic-live"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0.97"                                      # 错误处理库
arc-swap = "1.7.1"
chrono = "0.4.40"
dashmap = "6.1.0"
lazy_static = "1.5.0"
prost = "0.13.5"                                       # Protocol Buffers 实现
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.0", features = ["full"] }    # 异步运行时
tokio-stream = "0.1.17"
tonic = "0.12.3"                                       # gRPC 框架
tracing = "0.1.41"
# tracing-subscriber 是用于配置和管理日志输出的库
# env-filter 特性允许通过环境变量控制日志级别
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[build-dependencies]
tonic-build = "0.12.3" # tonic 的构建依赖
